cloudformation/ecs/ecs-vpc.json
{
  "AWSTemplateFormatVersion":"2010-09-09",
  "Description":"Example VPC that has two public subnets and two private subnets in different AZs NATs to enable instances in private subnets to access the internet and bastion hosts to moderate SSH access",
  "Parameters":{
    "KeyName":{
      "Type":"AWS::EC2::KeyPair::KeyName",
      "Description":"Name of an existing EC2 KeyPair to enable SSH access to the ECS instances"
    },
    "BastionInstanceType":{
      "Description":"Bastion instance type",
      "Type":"String",
      "Default":"t1.micro",
      "AllowedValues":[
        "t1.micro",
        "m1.small",
        "m1.medium",
        "m1.large"
      ],
      "ConstraintDescription":"must be a valid and allowed EC2 instance type."
    }
  },
  "Mappings":{
    "AWSInstanceType2Arch":{
      "t1.micro":{
        "Arch":"64"
      },
      "m1.small":{
        "Arch":"64"
      },
      "m1.medium":{
        "Arch":"64"
      },
      "m1.large":{
        "Arch":"64"
      }
    },
    "AWSNATAMI":{
      "us-east-1":{
        "AMI":"ami-c6699baf"
      },
      "us-west-2":{
        "AMI":"ami-52ff7262"
      },
      "us-west-1":{
        "AMI":"ami-3bcc9e7e"
      },
      "eu-west-1":{
        "AMI":"ami-0b5b6c7f"
      },
      "ap-southeast-1":{
        "AMI":"ami-02eb9350"
      },
      "ap-southeast-2":{
        "AMI":"ami-ab990e91"
      },
      "ap-northeast-1":{
        "AMI":"ami-14d86d15"
      },
      "sa-east-1":{
        "AMI":"ami-0439e619"
      }
    },
    "AWSRegionArch2AMI":{
      "us-east-1":{
        "64":"ami-0568456c"
      },
      "us-west-2":{
        "64":"ami-927613a2"
      },
      "us-west-1":{
        "64":"ami-c08dbc85"
      }
    }
  },
  "Resources":{
    "VPC":{
      "Type":"AWS::EC2::VPC",
      "Properties":{
        "CidrBlock":"10.0.0.0/16",
        "Tags":[
          {
            "Key":"Name",
            "Value":{
              "Ref":"AWS::StackName"
            }
          },
          {
            "Key":"Application",
            "Value":{
              "Ref":"AWS::StackId"
            }
          },
          {
            "Key":"Network",
            "Value":"Public"
          }
        ]
      }
    },
    "PublicSubnet1":{
      "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{
          "Ref":"VPC"
        },
        "MapPublicIpOnLaunch":"true",
        "CidrBlock":"10.0.0.0/24",
        "AvailabilityZone":{
          "Fn::Select":[
            "0",
            {
              "Fn::GetAZs":{
                "Ref":"AWS::Region"
              }
            }
          ]
        },
        "Tags":[
          {
            "Key":"Name",
            "Value":{
              "Ref":"AWS::StackName"
            }
          },
          {
            "Key":"Application",
            "Value":{
              "Ref":"AWS::StackId"
            }
          },
          {
            "Key":"Network",
            "Value":"Public"
          }
        ]
      }
    },
    "PublicSubnet2":{
      "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{
          "Ref":"VPC"
        },
        "MapPublicIpOnLaunch":"true",
        "CidrBlock":"10.0.2.0/24",
        "AvailabilityZone":{
          "Fn::Select":[
            "1",
            {
              "Fn::GetAZs":{
                "Ref":"AWS::Region"
              }
            }
          ]
        },
        "Tags":[
          {
            "Key":"Name",
            "Value":{
              "Ref":"AWS::StackName"
            }
          },
          {
            "Key":"Application",
            "Value":{
              "Ref":"AWS::StackId"
            }
          },
          {
            "Key":"Network",
            "Value":"Public"
          }
        ]
      }
    },
    "PublicSubnet3":{
      "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{
          "Ref":"VPC"
        },
        "MapPublicIpOnLaunch":"true",
        "CidrBlock":"10.0.4.0/24",
        "AvailabilityZone":{
          "Fn::Select":[
            "2",
            {
              "Fn::GetAZs":{
                "Ref":"AWS::Region"
              }
            }
          ]
        },
        "Tags":[
          {
            "Key":"Name",
            "Value":{
              "Ref":"AWS::StackName"
            }
          },
          {
            "Key":"Application",
            "Value":{
              "Ref":"AWS::StackId"
            }
          },
          {
            "Key":"Network",
            "Value":"Public"
          }
        ]
      }
    },
    "PublicSubnet4":{
      "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{
          "Ref":"VPC"
        },
        "MapPublicIpOnLaunch":"true",
        "CidrBlock":"10.0.6.0/24",
        "AvailabilityZone":{
          "Fn::Select":[
            "3",
            {
              "Fn::GetAZs":{
                "Ref":"AWS::Region"
              }
            }
          ]
        },
        "Tags":[
          {
            "Key":"Name",
            "Value":{
              "Ref":"AWS::StackName"
            }
          },
          {
            "Key":"Application",
            "Value":{
              "Ref":"AWS::StackId"
            }
          },
          {
            "Key":"Network",
            "Value":"Public"
          }
        ]
      }
    },
    "InternetGateway":{
      "Type":"AWS::EC2::InternetGateway",
      "Properties":{
        "Tags":[
          {
            "Key":"Name",
            "Value":{
              "Ref":"AWS::StackName"
            }
          },
          {
            "Key":"Application",
            "Value":{
              "Ref":"AWS::StackId"
            }
          },
          {
            "Key":"Network",
            "Value":"Public"
          }
        ]
      }
    },
    "GatewayToInternet":{
      "Type":"AWS::EC2::VPCGatewayAttachment",
      "Properties":{
        "VpcId":{
          "Ref":"VPC"
        },
        "InternetGatewayId":{
          "Ref":"InternetGateway"
        }
      }
    },
    "PublicRouteTable":{
      "Type":"AWS::EC2::RouteTable",
      "Properties":{
        "VpcId":{
          "Ref":"VPC"
        },
        "Tags":[
          {
            "Key":"Name",
            "Value":{
              "Ref":"AWS::StackName"
            }
          },
          {
            "Key":"Application",
            "Value":{
              "Ref":"AWS::StackId"
            }
          },
          {
            "Key":"Network",
            "Value":"Public"
          }
        ]
      }
    },
    "PublicRoute":{
      "Type":"AWS::EC2::Route",
      "DependsOn":"GatewayToInternet",
      "Properties":{
        "RouteTableId":{
          "Ref":"PublicRouteTable"
        },
        "DestinationCidrBlock":"0.0.0.0/0",
        "GatewayId":{
          "Ref":"InternetGateway"
        }
      }
    },
    "PublicSubnetRouteTableAssociation1":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
        "SubnetId":{
          "Ref":"PublicSubnet1"
        },
        "RouteTableId":{
          "Ref":"PublicRouteTable"
        }
      }
    },
    "PublicSubnetRouteTableAssociation2":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
        "SubnetId":{
          "Ref":"PublicSubnet2"
        },
        "RouteTableId":{
          "Ref":"PublicRouteTable"
        }
      }
    },
    "PublicSubnetRouteTableAssociation3":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
        "SubnetId":{
          "Ref":"PublicSubnet3"
        },
        "RouteTableId":{
          "Ref":"PublicRouteTable"
        }
      }
    },
    "PublicSubnetRouteTableAssociation4":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
        "SubnetId":{
          "Ref":"PublicSubnet4"
        },
        "RouteTableId":{
          "Ref":"PublicRouteTable"
        }
      }
    },
    "PublicNetworkAcl":{
      "Type":"AWS::EC2::NetworkAcl",
      "Properties":{
        "VpcId":{
          "Ref":"VPC"
        },
        "Tags":[
          {
            "Key":"Name",
            "Value":{
              "Ref":"AWS::StackName"
            }
          },
          {
            "Key":"Application",
            "Value":{
              "Ref":"AWS::StackId"
            }
          },
          {
            "Key":"Network",
            "Value":"Public"
          }
        ]
      }
    },
    "InboundHTTPPublicNetworkAclEntry":{
      "Type":"AWS::EC2::NetworkAclEntry",
      "Properties":{
        "NetworkAclId":{
          "Ref":"PublicNetworkAcl"
        },
        "RuleNumber":"100",
        "Protocol":"6",
        "RuleAction":"allow",
        "Egress":"false",
        "CidrBlock":"0.0.0.0/0",
        "PortRange":{
          "From":"80",
          "To":"80"
        }
      }
    },
    "InboundHTTPSPublicNetworkAclEntry":{
      "Type":"AWS::EC2::NetworkAclEntry",
      "Properties":{
        "NetworkAclId":{
          "Ref":"PublicNetworkAcl"
        },
        "RuleNumber":"101",
        "Protocol":"6",
        "RuleAction":"allow",
        "Egress":"false",
        "CidrBlock":"0.0.0.0/0",
        "PortRange":{
          "From":"443",
          "To":"443"
        }
      }
    },
    "InboundSSHPublicNetworkAclEntry":{
      "Type":"AWS::EC2::NetworkAclEntry",
      "Properties":{
        "NetworkAclId":{
          "Ref":"PublicNetworkAcl"
        },
        "RuleNumber":"102",
        "Protocol":"6",
        "RuleAction":"allow",
        "Egress":"false",
        "CidrBlock":"0.0.0.0/0",
        "PortRange":{
          "From":"22",
          "To":"22"
        }
      }
    },
    "InboundDynamicPortsPublicNetworkAclEntry":{
      "Type":"AWS::EC2::NetworkAclEntry",
      "Properties":{
        "NetworkAclId":{
          "Ref":"PublicNetworkAcl"
        },
        "RuleNumber":"103",
        "Protocol":"6",
        "RuleAction":"allow",
        "Egress":"false",
        "CidrBlock":"0.0.0.0/0",
        "PortRange":{
          "From":"1024",
          "To":"65535"
        }
      }
    },
    "OutboundPublicNetworkAclEntry":{
      "Type":"AWS::EC2::NetworkAclEntry",
      "Properties":{
        "NetworkAclId":{
          "Ref":"PublicNetworkAcl"
        },
        "RuleNumber":"100",
        "Protocol":"6",
        "RuleAction":"allow",
        "Egress":"true",
        "CidrBlock":"0.0.0.0/0",
        "PortRange":{
          "From":"0",
          "To":"65535"
        }
      }
    },
    "PublicSubnetNetworkAclAssociation1":{
      "Type":"AWS::EC2::SubnetNetworkAclAssociation",
      "Properties":{
        "SubnetId":{
          "Ref":"PublicSubnet1"
        },
        "NetworkAclId":{
          "Ref":"PublicNetworkAcl"
        }
      }
    },
    "PublicSubnetNetworkAclAssociation2":{
      "Type":"AWS::EC2::SubnetNetworkAclAssociation",
      "Properties":{
        "SubnetId":{
          "Ref":"PublicSubnet2"
        },
        "NetworkAclId":{
          "Ref":"PublicNetworkAcl"
        }
      }
    },
    "PublicSubnetNetworkAclAssociation3":{
      "Type":"AWS::EC2::SubnetNetworkAclAssociation",
      "Properties":{
        "SubnetId":{
          "Ref":"PublicSubnet3"
        },
        "NetworkAclId":{
          "Ref":"PublicNetworkAcl"
        }
      }
    },
    "PublicSubnetNetworkAclAssociation4":{
      "Type":"AWS::EC2::SubnetNetworkAclAssociation",
      "Properties":{
        "SubnetId":{
          "Ref":"PublicSubnet4"
        },
        "NetworkAclId":{
          "Ref":"PublicNetworkAcl"
        }
      }
    },
    "PrivateSubnet1":{
      "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{
          "Ref":"VPC"
        },
        "CidrBlock":"10.0.1.0/24",
        "AvailabilityZone":{
          "Fn::Select":[
            "0",
            {
              "Fn::GetAZs":{
                "Ref":"AWS::Region"
              }
            }
          ]
        },
        "Tags":[
          {
            "Key":"Name",
            "Value":{
              "Fn::Join":[
                "",
                [
                  {
                    "Ref":"AWS::StackName"
                  },
                  "-private"
                ]
              ]
            }
          },
          {
            "Key":"Application",
            "Value":{
              "Ref":"AWS::StackId"
            }
          },
          {
            "Key":"Network",
            "Value":"Private"
          }
        ]
      }
    },
    "PrivateSubnet2":{
      "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{
          "Ref":"VPC"
        },
        "CidrBlock":"10.0.3.0/24",
        "AvailabilityZone":{
          "Fn::Select":[
            "1",
            {
              "Fn::GetAZs":{
                "Ref":"AWS::Region"
              }
            }
          ]
        },
        "Tags":[
          {
            "Key":"Name",
            "Value":{
              "Fn::Join":[
                "",
                [
                  {
                    "Ref":"AWS::StackName"
                  },
                  "-private"
                ]
              ]
            }
          },
          {
            "Key":"Application",
            "Value":{
              "Ref":"AWS::StackId"
            }
          },
          {
            "Key":"Network",
            "Value":"Private"
          }
        ]
      }
    },
    "PrivateRouteTable1":{
      "Type":"AWS::EC2::RouteTable",
      "Properties":{
        "VpcId":{
          "Ref":"VPC"
        },
        "Tags":[
          {
            "Key":"Application",
            "Value":{
              "Ref":"AWS::StackId"
            }
          },
          {
            "Key":"Network",
            "Value":"Private"
          }
        ]
      }
    },
    "PrivateRouteTable2":{
      "Type":"AWS::EC2::RouteTable",
      "Properties":{
        "VpcId":{
          "Ref":"VPC"
        },
        "Tags":[
          {
            "Key":"Application",
            "Value":{
              "Ref":"AWS::StackId"
            }
          },
          {
            "Key":"Network",
            "Value":"Private"
          }
        ]
      }
    },
    "PrivateSubnetRouteTableAssociation1":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
        "SubnetId":{
          "Ref":"PrivateSubnet1"
        },
        "RouteTableId":{
          "Ref":"PrivateRouteTable1"
        }
      }
    },
    "PrivateSubnetRouteTableAssociation2":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
        "SubnetId":{
          "Ref":"PrivateSubnet2"
        },
        "RouteTableId":{
          "Ref":"PrivateRouteTable2"
        }
      }
    },
    "PrivateRoute1":{
      "Type":"AWS::EC2::Route",
      "Properties":{
        "RouteTableId":{
          "Ref":"PrivateRouteTable1"
        },
        "DestinationCidrBlock":"0.0.0.0/0",
        "InstanceId":{
          "Ref":"NATDevice1"
        }
      }
    },
    "PrivateRoute2":{
      "Type":"AWS::EC2::Route",
      "Properties":{
        "RouteTableId":{
          "Ref":"PrivateRouteTable2"
        },
        "DestinationCidrBlock":"0.0.0.0/0",
        "InstanceId":{
          "Ref":"NATDevice2"
        }
      }
    },
    "PrivateNetworkAcl":{
      "Type":"AWS::EC2::NetworkAcl",
      "Properties":{
        "VpcId":{
          "Ref":"VPC"
        },
        "Tags":[
          {
            "Key":"Application",
            "Value":{
              "Ref":"AWS::StackId"
            }
          },
          {
            "Key":"Network",
            "Value":"Private"
          }
        ]
      }
    },
    "InboundPrivateNetworkAclEntry":{
      "Type":"AWS::EC2::NetworkAclEntry",
      "Properties":{
        "NetworkAclId":{
          "Ref":"PrivateNetworkAcl"
        },
        "RuleNumber":"100",
        "Protocol":"6",
        "RuleAction":"allow",
        "Egress":"false",
        "CidrBlock":"0.0.0.0/0",
        "PortRange":{
          "From":"0",
          "To":"65535"
        }
      }
    },
    "OutboundPrivateNetworkAclEntry":{
      "Type":"AWS::EC2::NetworkAclEntry",
      "Properties":{
        "NetworkAclId":{
          "Ref":"PrivateNetworkAcl"
        },
        "RuleNumber":"100",
        "Protocol":"6",
        "RuleAction":"allow",
        "Egress":"true",
        "CidrBlock":"0.0.0.0/0",
        "PortRange":{
          "From":"0",
          "To":"65535"
        }
      }
    },
    "PrivateSubnetNetworkAclAssociation1":{
      "Type":"AWS::EC2::SubnetNetworkAclAssociation",
      "Properties":{
        "SubnetId":{
          "Ref":"PrivateSubnet1"
        },
        "NetworkAclId":{
          "Ref":"PrivateNetworkAcl"
        }
      }
    },
    "PrivateSubnetNetworkAclAssociation2":{
      "Type":"AWS::EC2::SubnetNetworkAclAssociation",
      "Properties":{
        "SubnetId":{
          "Ref":"PrivateSubnet2"
        },
        "NetworkAclId":{
          "Ref":"PrivateNetworkAcl"
        }
      }
    },
    "NATIPAddress1":{
      "Type":"AWS::EC2::EIP",
      "DependsOn":"GatewayToInternet",
      "Properties":{
        "Domain":"vpc",
        "InstanceId":{
          "Ref":"NATDevice1"
        }
      }
    },
    "NATIPAddress2":{
      "Type":"AWS::EC2::EIP",
      "DependsOn":"GatewayToInternet",
      "Properties":{
        "Domain":"vpc",
        "InstanceId":{
          "Ref":"NATDevice2"
        }
      }
    },
    "NATDevice1":{
      "Type":"AWS::EC2::Instance",
      "Properties":{
        "InstanceType":"t1.micro",
        "KeyName":{
          "Ref":"KeyName"
        },
        "SubnetId":{
          "Ref":"PublicSubnet1"
        },
        "SourceDestCheck":"false",
        "ImageId":{
          "Fn::FindInMap":[
            "AWSNATAMI",
            {
              "Ref":"AWS::Region"
            },
            "AMI"
          ]
        },
        "SecurityGroupIds":[
          {
            "Ref":"NATSecurityGroup"
          }
        ],
        "Tags":[
          {
            "Key":"Name",
            "Value":"NAT Device"
          }
        ]
      }
    },
    "NATDevice2":{
      "Type":"AWS::EC2::Instance",
      "Properties":{
        "InstanceType":"t1.micro",
        "KeyName":{
          "Ref":"KeyName"
        },
        "SubnetId":{
          "Ref":"PublicSubnet2"
        },
        "SourceDestCheck":"false",
        "ImageId":{
          "Fn::FindInMap":[
            "AWSNATAMI",
            {
              "Ref":"AWS::Region"
            },
            "AMI"
          ]
        },
        "SecurityGroupIds":[
          {
            "Ref":"NATSecurityGroup"
          }
        ],
        "Tags":[
          {
            "Key":"Name",
            "Value":"NAT Device"
          }
        ]
      }
    },
    "NATSecurityGroup":{
      "Type":"AWS::EC2::SecurityGroup",
      "Properties":{
        "GroupDescription":"Enable internal access to the NAT device",
        "VpcId":{
          "Ref":"VPC"
        },
        "SecurityGroupIngress":[
          {
            "IpProtocol":"tcp",
            "FromPort":"80",
            "ToPort":"80",
            "CidrIp":"0.0.0.0/0"
          },
          {
            "IpProtocol":"tcp",
            "FromPort":"443",
            "ToPort":"443",
            "CidrIp":"0.0.0.0/0"
          },
          {
            "IpProtocol":"tcp",
            "FromPort":"22",
            "ToPort":"22",
            "SourceSecurityGroupId":{
              "Ref":"BastionSecurityGroup"
            }
          },
          {
            "IpProtocol":"tcp",
            "FromPort":"1",
            "ToPort":"65535",
            "SourceSecurityGroupId":{
              "Ref":"InternalSshSecurityGroup"
            }
          }
        ],
        "SecurityGroupEgress":[
          {
            "IpProtocol":"tcp",
            "FromPort":"1",
            "ToPort":"65535",
            "CidrIp":"0.0.0.0/0"
          }
        ]
      }
    },
    "BastionHost1":{
      "Type":"AWS::EC2::Instance",
      "DependsOn":"GatewayToInternet",
      "Properties":{
        "InstanceType":{
          "Ref":"BastionInstanceType"
        },
        "KeyName":{
          "Ref":"KeyName"
        },
        "ImageId":{
          "Fn::FindInMap":[
            "AWSRegionArch2AMI",
            {
              "Ref":"AWS::Region"
            },
            {
              "Fn::FindInMap":[
                "AWSInstanceType2Arch",
                {
                  "Ref":"BastionInstanceType"
                },
                "Arch"
              ]
            }
          ]
        },
        "NetworkInterfaces":[
          {
            "GroupSet":[
              {
                "Ref":"BastionSecurityGroup"
              }
            ],
            "AssociatePublicIpAddress":"true",
            "DeviceIndex":"0",
            "DeleteOnTermination":"true",
            "SubnetId":{
              "Ref":"PublicSubnet1"
            }
          }
        ],
        "Tags":[
          {
            "Key":"Name",
            "Value":"Bastion Host"
          },
          {
            "Key":"Bastion",
            "Value":"true"
          }
        ]
      }
    },
    "BastionHost2":{
      "Type":"AWS::EC2::Instance",
      "DependsOn":"GatewayToInternet",
      "Properties":{
        "InstanceType":{
          "Ref":"BastionInstanceType"
        },
        "KeyName":{
          "Ref":"KeyName"
        },
        "ImageId":{
          "Fn::FindInMap":[
            "AWSRegionArch2AMI",
            {
              "Ref":"AWS::Region"
            },
            {
              "Fn::FindInMap":[
                "AWSInstanceType2Arch",
                {
                  "Ref":"BastionInstanceType"
                },
                "Arch"
              ]
            }
          ]
        },
        "NetworkInterfaces":[
          {
            "GroupSet":[
              {
                "Ref":"BastionSecurityGroup"
              }
            ],
            "AssociatePublicIpAddress":"true",
            "DeviceIndex":"0",
            "DeleteOnTermination":"true",
            "SubnetId":{
              "Ref":"PublicSubnet2"
            }
          }
        ],
        "Tags":[
          {
            "Key":"Name",
            "Value":"Bastion Host"
          },
          {
            "Key":"Bastion",
            "Value":"true"
          }
        ]
      }
    },
    "BastionSecurityGroup":{
      "Type":"AWS::EC2::SecurityGroup",
      "Properties":{
        "GroupDescription":"Enable access to the bastion host",
        "VpcId":{
          "Ref":"VPC"
        },
        "SecurityGroupIngress":[
          {
            "IpProtocol":"tcp",
            "FromPort":"22",
            "ToPort":"22",
            "CidrIp":"0.0.0.0/0"
          }
        ]
      }
    },
    "InternalSshSecurityGroup":{
      "Type":"AWS::EC2::SecurityGroup",
      "Properties":{
        "GroupDescription":"Allow ssh access from bastion",
        "VpcId":{
          "Ref":"VPC"
        },
        "SecurityGroupIngress":[
          {
            "IpProtocol":"tcp",
            "FromPort":"22",
            "ToPort":"22",
            "SourceSecurityGroupId":{
              "Ref":"BastionSecurityGroup"
            }
          }
        ],
        "SecurityGroupEgress":[

        ]
      }
    }
  },
  "Outputs":{
    "VpcId":{
      "Description":"VPC",
      "Value":{
        "Ref":"VPC"
      }
    },
    "PublicSubnet1":{
      "Description":"Public subnet 1",
      "Value":{
        "Ref":"PublicSubnet1"
      }
    },
    "PublicSubnet2":{
      "Description":"Public subnet 2",
      "Value":{
        "Ref":"PublicSubnet2"
      }
    },
    "PublicSubnet3":{
      "Description":"Public subnet 3",
      "Value":{
        "Ref":"PublicSubnet3"
      }
    },
    "PublicSubnet4":{
      "Description":"Public subnet 4",
      "Value":{
        "Ref":"PublicSubnet4"
      }
    },
    "PublicSubnets":{
      "Description":"Public subnet",
      "Value":{
        "Fn::Join":[
          ",",
          [
            {
              "Ref":"PublicSubnet1"
            },
            {
              "Ref":"PublicSubnet2"
            },
            {
              "Ref":"PublicSubnet3"
            },
            {
              "Ref":"PublicSubnet4"
            }
          ]
        ]
      }
    },
    "PrivateSubnets":{
      "Description":"Private subnet",
      "Value":{
        "Fn::Join":[
          ",",
          [
            {
              "Ref":"PrivateSubnet1"
            },
            {
              "Ref":"PrivateSubnet2"
            }
          ]
        ]
      }
    },
    "AZs":{
      "Description":"Availability zones",
      "Value":{
        "Fn::Join":[
          ",",
          [
            {
              "Fn::GetAtt":[
                "PrivateSubnet1",
                "AvailabilityZone"
              ]
            },
            {
              "Fn::GetAtt":[
                "PrivateSubnet2",
                "AvailabilityZone"
              ]
            }
          ]
        ]
      }
    },
    "InternalSshSecurityGroupId":{
      "Description":"Internal ssh security group",
      "Value":{
        "Ref":"InternalSshSecurityGroup"
      }
    }
  }
}
